[tool.poetry]
name = "flask-surfconext-login"
version = "0.1.0"
description = ""
authors = ["Nico de Groot <ndegroot0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Authlib = "^1.3.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
